--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
