--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 # JPA/Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
@@ -9,14 +9,18 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Configuration
-jwt.secret=your_jwt_secret
-jwt.expiration=86400000
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${jwt.expiration}
 
 # Server Configuration
-server.port=8080
+server.port=${PORT:8080}
 
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.expensesplitter=DEBUG
 
-# Add any other configuration properties here
+# SSL Configuration for Railway PostgreSQL
+spring.datasource.hikari.ssl-mode=require
+
+# Additional Railway-specific configurations
+spring.datasource.hikari.maximum-pool-size=5
