--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 
@@ -24,3 +24,7 @@ spring.datasource.hikari.ssl-mode=require
 
 # Additional Railway-specific configurations
 spring.datasource.hikari.maximum-pool-size=5
+
+# Enable this to see detailed database connection information
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.com.zaxxer.hikari=TRACE
