--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Configuration
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 
@@ -18,12 +18,21 @@ server.port=${PORT:8080}
 # Logging Configuration
 logging.level.root=INFO
 logging.level.com.expensesplitter=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # SSL Configuration for Railway PostgreSQL
 spring.datasource.hikari.ssl-mode=require
 
 # Additional Railway-specific configurations
 spring.datasource.hikari.maximum-pool-size=5
+
+# Database connection properties
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
 
 # Enable this to see detailed database connection information
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
