--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "jwt-decode": "^4.0.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@types/node": "^20",
